@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/file-5.06.ebuild,v 1.2 2012/02/02 01:35:39 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/file-5.06.ebuild,v 1.3 2012/02/02 01:49:37 floppym Exp $
 
 EAPI="2"
 PYTHON_DEPEND="python? *"
